PL-7850 Fix margins and paddings for window wrap and table buttons panel (havana)

--- a/modules/web/themes/havana/app/app-window.scss
+++ b/modules/web/themes/havana/app/app-window.scss
@@ -197,11 +197,11 @@
   }
 
   .c-app-window-wrap.c-breadcrumbs-visible {
-    padding-top: 30px;
+    padding-top: 25px;
 
     .c-headline-container {
-      margin-top: -30px;
-      padding-top: 5px;
+      margin-top: -25px;
+      padding-top: 3px;
     }
   }
 }
